parser/aclrules_parser.go
// Code generated from AclRules.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parsing // AclRules
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AclRulesParser struct {
	*antlr.BaseParser
}

var AclRulesParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func aclrulesParserInit() {
	staticData := &AclRulesParserStaticData
	staticData.LiteralNames = []string{
		"", "'='", "'**'", "'{'", "'}'", "'('", "')'", "'$('", "'['", "']'",
		"'.'", "':'", "','", "';'", "'<'", "'<='", "'>='", "'>'", "'=='", "'!='",
		"'&&'", "'||'", "'!'", "'&'", "'|'", "'+'", "'-'", "'*'", "'^'", "'%'",
		"'in'", "'allow'", "'match'", "'if'", "'get'", "'exists'", "'true'",
		"'false'", "'list'", "'create'", "'update'", "'read'", "'write'", "'delete'",
		"'function'", "'return'", "'null'", "'service'", "", "", "", "'/'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "CurlyOpen", "CurlyClose", "BracketOpen", "BracketClose",
		"PathVariableBracket", "SquareBracketOpen", "SquareBracketClose", "Dot",
		"Colon", "Comma", "Semicolon", "LessThan", "LessOrEqual", "GreaterOrEqual",
		"GreaterThan", "Equals", "Unequal", "LogicalAnd", "LogicalOr", "LogicalNot",
		"BinaryAnd", "BinaryOr", "ArithmeticAdd", "ArithmeticSub", "ArithmeticMul",
		"ArithmeticExp", "ArithmeticModus", "InOperator", "Allow", "Match",
		"If", "Get", "Exists", "True", "False", "List", "Create", "Update",
		"Read", "Write", "Delete", "Function", "Return", "Null", "Service",
		"Number", "String", "Identifier", "Slash", "WS", "Comment",
	}
	staticData.RuleNames = []string{
		"service", "namespaceIdentifier", "namespaceBlock", "matchBlock", "allowKey",
		"comment", "matcher", "allow", "getPathVariable", "pathVariable", "arg",
		"arguments", "memberArg", "memberArguments", "argDeclaration", "argDeclarations",
		"functionDeclaration", "fieldReference", "id", "expression", "objectReference",
		"getPathExpressionVariable", "getPath", "ruleFunctionCall", "functionCall",
		"matchPath",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AclRulesParserInit initializes any static state used to implement AclRulesParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAclRulesParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AclRulesParserInit() {
	staticData := &AclRulesParserStaticData
	staticData.once.Do(aclrulesParserInit)
}

// NewAclRulesParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAclRulesParser(input antlr.TokenStream) *AclRulesParser {
	AclRulesParserInit()
	this := new(AclRulesParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &AclRulesParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "AclRules.g4"

	return this
}

// AclRulesParser tokens.
const (
	AclRulesParserEOF                 = antlr.TokenEOF
	AclRulesParserT__0                = 1
	AclRulesParserT__1                = 2
	AclRulesParserCurlyOpen           = 3
	AclRulesParserCurlyClose          = 4
	AclRulesParserBracketOpen         = 5
	AclRulesParserBracketClose        = 6
	AclRulesParserPathVariableBracket = 7
	AclRulesParserSquareBracketOpen   = 8
	AclRulesParserSquareBracketClose  = 9
	AclRulesParserDot                 = 10
	AclRulesParserColon               = 11
	AclRulesParserComma               = 12
	AclRulesParserSemicolon           = 13
	AclRulesParserLessThan            = 14
	AclRulesParserLessOrEqual         = 15
	AclRulesParserGreaterOrEqual      = 16
	AclRulesParserGreaterThan         = 17
	AclRulesParserEquals              = 18
	AclRulesParserUnequal             = 19
	AclRulesParserLogicalAnd          = 20
	AclRulesParserLogicalOr           = 21
	AclRulesParserLogicalNot          = 22
	AclRulesParserBinaryAnd           = 23
	AclRulesParserBinaryOr            = 24
	AclRulesParserArithmeticAdd       = 25
	AclRulesParserArithmeticSub       = 26
	AclRulesParserArithmeticMul       = 27
	AclRulesParserArithmeticExp       = 28
	AclRulesParserArithmeticModus     = 29
	AclRulesParserInOperator          = 30
	AclRulesParserAllow               = 31
	AclRulesParserMatch               = 32
	AclRulesParserIf                  = 33
	AclRulesParserGet                 = 34
	AclRulesParserExists              = 35
	AclRulesParserTrue                = 36
	AclRulesParserFalse               = 37
	AclRulesParserList                = 38
	AclRulesParserCreate              = 39
	AclRulesParserUpdate              = 40
	AclRulesParserRead                = 41
	AclRulesParserWrite               = 42
	AclRulesParserDelete              = 43
	AclRulesParserFunction            = 44
	AclRulesParserReturn              = 45
	AclRulesParserNull                = 46
	AclRulesParserService             = 47
	AclRulesParserNumber              = 48
	AclRulesParserString_             = 49
	AclRulesParserIdentifier          = 50
	AclRulesParserSlash               = 51
	AclRulesParserWS                  = 52
	AclRulesParserComment             = 53
)

// AclRulesParser rules.
const (
	AclRulesParserRULE_service                   = 0
	AclRulesParserRULE_namespaceIdentifier       = 1
	AclRulesParserRULE_namespaceBlock            = 2
	AclRulesParserRULE_matchBlock                = 3
	AclRulesParserRULE_allowKey                  = 4
	AclRulesParserRULE_comment                   = 5
	AclRulesParserRULE_matcher                   = 6
	AclRulesParserRULE_allow                     = 7
	AclRulesParserRULE_getPathVariable           = 8
	AclRulesParserRULE_pathVariable              = 9
	AclRulesParserRULE_arg                       = 10
	AclRulesParserRULE_arguments                 = 11
	AclRulesParserRULE_memberArg                 = 12
	AclRulesParserRULE_memberArguments           = 13
	AclRulesParserRULE_argDeclaration            = 14
	AclRulesParserRULE_argDeclarations           = 15
	AclRulesParserRULE_functionDeclaration       = 16
	AclRulesParserRULE_fieldReference            = 17
	AclRulesParserRULE_id                        = 18
	AclRulesParserRULE_expression                = 19
	AclRulesParserRULE_objectReference           = 20
	AclRulesParserRULE_getPathExpressionVariable = 21
	AclRulesParserRULE_getPath                   = 22
	AclRulesParserRULE_ruleFunctionCall          = 23
	AclRulesParserRULE_functionCall              = 24
	AclRulesParserRULE_matchPath                 = 25
)

// IServiceContext is an interface to support dynamic dispatch.
type IServiceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Service() antlr.TerminalNode
	NamespaceIdentifier() INamespaceIdentifierContext
	NamespaceBlock() INamespaceBlockContext

	// IsServiceContext differentiates from other interfaces.
	IsServiceContext()
}

type ServiceContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServiceContext() *ServiceContext {
	var p = new(ServiceContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_service
	return p
}

func InitEmptyServiceContext(p *ServiceContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_service
}

func (*ServiceContext) IsServiceContext() {}

func NewServiceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServiceContext {
	var p = new(ServiceContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AclRulesParserRULE_service

	return p
}

func (s *ServiceContext) GetParser() antlr.Parser { return s.parser }

func (s *ServiceContext) Service() antlr.TerminalNode {
	return s.GetToken(AclRulesParserService, 0)
}

func (s *ServiceContext) NamespaceIdentifier() INamespaceIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamespaceIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamespaceIdentifierContext)
}

func (s *ServiceContext) NamespaceBlock() INamespaceBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamespaceBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamespaceBlockContext)
}

func (s *ServiceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ServiceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ServiceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.EnterService(s)
	}
}

func (s *ServiceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.ExitService(s)
	}
}

func (p *AclRulesParser) Service() (localctx IServiceContext) {
	localctx = NewServiceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AclRulesParserRULE_service)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(AclRulesParserService)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.NamespaceIdentifier()
	}
	{
		p.SetState(54)
		p.NamespaceBlock()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INamespaceIdentifierContext is an interface to support dynamic dispatch.
type INamespaceIdentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllId() []IIdContext
	Id(i int) IIdContext
	AllDot() []antlr.TerminalNode
	Dot(i int) antlr.TerminalNode

	// IsNamespaceIdentifierContext differentiates from other interfaces.
	IsNamespaceIdentifierContext()
}

type NamespaceIdentifierContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceIdentifierContext() *NamespaceIdentifierContext {
	var p = new(NamespaceIdentifierContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_namespaceIdentifier
	return p
}

func InitEmptyNamespaceIdentifierContext(p *NamespaceIdentifierContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_namespaceIdentifier
}

func (*NamespaceIdentifierContext) IsNamespaceIdentifierContext() {}

func NewNamespaceIdentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceIdentifierContext {
	var p = new(NamespaceIdentifierContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AclRulesParserRULE_namespaceIdentifier

	return p
}

func (s *NamespaceIdentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceIdentifierContext) AllId() []IIdContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IIdContext); ok {
			len++
		}
	}

	tst := make([]IIdContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IIdContext); ok {
			tst[i] = t.(IIdContext)
			i++
		}
	}

	return tst
}

func (s *NamespaceIdentifierContext) Id(i int) IIdContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *NamespaceIdentifierContext) AllDot() []antlr.TerminalNode {
	return s.GetTokens(AclRulesParserDot)
}

func (s *NamespaceIdentifierContext) Dot(i int) antlr.TerminalNode {
	return s.GetToken(AclRulesParserDot, i)
}

func (s *NamespaceIdentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceIdentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceIdentifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.EnterNamespaceIdentifier(s)
	}
}

func (s *NamespaceIdentifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.ExitNamespaceIdentifier(s)
	}
}

func (p *AclRulesParser) NamespaceIdentifier() (localctx INamespaceIdentifierContext) {
	localctx = NewNamespaceIdentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AclRulesParserRULE_namespaceIdentifier)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Id()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == AclRulesParserDot {
		{
			p.SetState(57)
			p.Match(AclRulesParserDot)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(58)
			p.Id()
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INamespaceBlockContext is an interface to support dynamic dispatch.
type INamespaceBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CurlyOpen() antlr.TerminalNode
	CurlyClose() antlr.TerminalNode
	AllMatcher() []IMatcherContext
	Matcher(i int) IMatcherContext
	AllComment() []ICommentContext
	Comment(i int) ICommentContext
	AllFunctionDeclaration() []IFunctionDeclarationContext
	FunctionDeclaration(i int) IFunctionDeclarationContext

	// IsNamespaceBlockContext differentiates from other interfaces.
	IsNamespaceBlockContext()
}

type NamespaceBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamespaceBlockContext() *NamespaceBlockContext {
	var p = new(NamespaceBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_namespaceBlock
	return p
}

func InitEmptyNamespaceBlockContext(p *NamespaceBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_namespaceBlock
}

func (*NamespaceBlockContext) IsNamespaceBlockContext() {}

func NewNamespaceBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamespaceBlockContext {
	var p = new(NamespaceBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AclRulesParserRULE_namespaceBlock

	return p
}

func (s *NamespaceBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *NamespaceBlockContext) CurlyOpen() antlr.TerminalNode {
	return s.GetToken(AclRulesParserCurlyOpen, 0)
}

func (s *NamespaceBlockContext) CurlyClose() antlr.TerminalNode {
	return s.GetToken(AclRulesParserCurlyClose, 0)
}

func (s *NamespaceBlockContext) AllMatcher() []IMatcherContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMatcherContext); ok {
			len++
		}
	}

	tst := make([]IMatcherContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMatcherContext); ok {
			tst[i] = t.(IMatcherContext)
			i++
		}
	}

	return tst
}

func (s *NamespaceBlockContext) Matcher(i int) IMatcherContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMatcherContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMatcherContext)
}

func (s *NamespaceBlockContext) AllComment() []ICommentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommentContext); ok {
			len++
		}
	}

	tst := make([]ICommentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommentContext); ok {
			tst[i] = t.(ICommentContext)
			i++
		}
	}

	return tst
}

func (s *NamespaceBlockContext) Comment(i int) ICommentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommentContext)
}

func (s *NamespaceBlockContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IFunctionDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionDeclarationContext); ok {
			tst[i] = t.(IFunctionDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *NamespaceBlockContext) FunctionDeclaration(i int) IFunctionDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *NamespaceBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamespaceBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamespaceBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.EnterNamespaceBlock(s)
	}
}

func (s *NamespaceBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AclRulesListener); ok {
		listenerT.ExitNamespaceBlock(s)
	}
}

func (p *AclRulesParser) NamespaceBlock() (localctx INamespaceBlockContext) {
	localctx = NewNamespaceBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AclRulesParserRULE_namespaceBlock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(AclRulesParserCurlyOpen)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&9024795735752704) != 0 {
		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case AclRulesParserMatch:
			{
				p.SetState(65)
				p.Matcher()
			}

		case AclRulesParserComment:
			{
				p.SetState(66)
				p.Comment()
			}

		case AclRulesParserFunction:
			{
				p.SetState(67)
				p.FunctionDeclaration()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(73)
		p.Match(AclRulesParserCurlyClose)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMatchBlockContext is an interface to support dynamic dispatch.
type IMatchBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CurlyOpen() antlr.TerminalNode
	CurlyClose() antlr.TerminalNode
	AllAllow() []IAllowContext
	Allow(i int) IAllowContext
	AllMatcher() []IMatcherContext
	Matcher(i int) IMatcherContext
	AllComment() []antlr.TerminalNode
	Comment(i int) antlr.TerminalNode
	AllFunctionDeclaration() []IFunctionDeclarationContext
	FunctionDeclaration(i int) IFunctionDeclarationContext

	// IsMatchBlockContext differentiates from other interfaces.
	IsMatchBlockContext()
}

type MatchBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchBlockContext() *MatchBlockContext {
	var p = new(MatchBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_matchBlock
	return p
}

func InitEmptyMatchBlockContext(p *MatchBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AclRulesParserRULE_matchBlock
}

func (*MatchBlockContext) IsMatchBlockContext() {}

func NewMatchBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchBlockContext {
	var p = new(MatchBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AclRulesParserRULE_matchBlock

	return p
}

func (s *MatchBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchBlockContext) CurlyOpen() antlr.TerminalNode {
	return s.GetToken(AclRulesParserCurlyOpen, 0)
}

func (s *MatchBlockContext) CurlyClose() antlr.TerminalNode {
	return s.GetToken(AclRulesParserCurlyClose, 0)
}

func (s *MatchBlockContext) AllAllow() []IAllowContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAllowContext); ok {
			len++
		}
	}

	tst := make([]IAllowContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAllowContext); ok {
			tst[i] = t.(IAllowContext)
			i++
		}
	}

	return tst
}

func (s *MatchBlockContext) Allow(i int) IAllowContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAllowContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAllowContext)
}

func (s *MatchBlockContext) AllMatcher() []IMatcherContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMatcherContext); ok {
			len++
		}
	}

	tst := make([]IMatcherContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMatcherContext); ok {
			tst[i] = t.(IMatcherContext)
			i++
		}
	}

	return tst
}

func (s *MatchBlockContext) Matcher(i int) IMatcherContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMatcherContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMatcherContext)
}

func (s *MatchBlockContext) AllComment() []antlr.TerminalNode {
	return s.GetTokens(AclRulesParserComment)
}

func (s *MatchBlockContext) Comment(i int) antlr.TerminalNode {
	return s.GetToken(AclRulesParserComment, i)
}

func (s *MatchBlockContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IFunctionDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionDeclarationContext); ok {
			tst[i] = t.(IFunctionDeclarationContext)
			i++
		}
	}

	return tst
}
